# advent_of_code

./: .gitignore  .pre-commit-config.yaml  .pylintrc  .pylintrc_tests  .travis.yml  Makefile  Pipfile  README.md  dprint.json  main.py  prepare-cache.sh  pylintrc  pyproject.toml  qodana.yaml  requirements-dev.txt  requirements.txt  run-qodana.sh  verify.sh
.basedpyright/: baseline.json
.github/workflows/: main.yml
.run/: solve.run.xml  test.run.xml
src/: __init__.py  day2b.py  day3a.py  day3b.py  day4a.py  day4b.py  day5b.py  day6a.py  day6b.py  day7a.py  day7b.py
src/utils/: cli.py
src/year2015/: __init__.py  day01a.py  day01b.py  day02a.py  day02b.py  day03a.py  day03b.py  day04a.py  day04b.py  day05a.py  day05b.py  day06a.py  day06b.py  day07a.py  day07b.py  day08a.py  day08b.py  day09a.py  day09b.py  day10a.py  day10b.py  day11a.py  day11b.py  day12a.py  day12b.py  day13a.py  day13b.py  day14a.py  day14b.py  day15a.py  day15b.py  day16a.py  day16b.py  day17a.py  day17b.py  day18a.py  day18b.py  day19a.py  day19b.py  day1a.py  (+13 more)
src/year2016/: __init__.py  day01a.py  day01b.py  day02a.py  day02b.py  day03a.py  day03b.py  day04a.py  day04b.py  day05a.py  day05b.py  day06a.py  day06b.py  day07a.py  day07b.py  day1a.py  day1b.py  day2a.py  day2b.py  day3a.py  day3b.py  day4a.py  day4b.py  day5a.py  day5b.py  day6a.py  day6b.py  day7a.py  day7b.py
src/year2017/: __init__.py  (+42 more)
tests/: __init__.py  conftest.py  test_day1a.py  test_day1b.py  test_day2a.py  test_day2b.py  test_day3a.py  test_day3b.py  test_day4a.py  test_day4b.py  test_day5a.py  test_day5b.py  test_day6a.py  test_day6b.py  test_day7a.py  test_main.py
utils/: __init__.py  cli.py
(+790 files in other folders)
