[project]
name = "advent-of-code"
version = "0.0.0"
requires-python = ">=3.13"
dependencies = [
  "advent-of-code-data>=2.1.0",
  "basedpyright>=1.31.4",
  "pytest>=8.4.2",
  "pytest-mock>=3.15.1",
  "ruff>=0.13.0",
  "ty>=0.0.1a20",
]

[tool.basedpyright]
ignore = ["tests"]

[tool.ruff.lint]
select = ["ALL"]
ignore = [
  # conflicts
  "COM812", # conflicts with ruff format
  "D203", # conflicts with D211
  "D213", # conflicts with D213

  # deselect
  "ANN", # we are using a typechecker
  "D", # documentation is not a concern for this project
  "S", # security is not a concern for this project

  # gradual adoption
  "ARG002",
  "ARG005",
  "B007",
  "B019",
  "B905",
  "C408",
  "C414",
  "C416",
  "C901",
  "DTZ001",
  "DTZ007",
  "EM101",
  "EM102",
  "ERA001",
  "FBT001",
  "FBT002",
  "FBT003",
  "FIX002",
  "FURB132",
  "N818",
  "PERF102",
  "PERF401",
  "PERF402",
  "PERF403",
  "PGH003",
  "PIE808",
  "PLR0911",
  "PLR0912",
  "PLR0913",
  "PLR0915",
  "PLR1714",
  "PLR1730",
  "PLR1733",
  "PLR2004",
  "PLR5501",
  "PLW0127",
  "PLW0133",
  "PLW1641",
  "PLW2901",
  "PT006",
  "PT007",
  "PT009",
  "PT022",
  "PT027",
  "PYI019",
  "PYI024",
  "PYI032",
  "RET503",
  "RET504",
  "RET505",
  "RET507",
  "RET508",
  "RUF005",
  "RUF015",
  "RUF022",
  "RUF046",
  "SIM102",
  "SIM103",
  "SIM108",
  "SIM110",
  "SIM114",
  "SIM118",
  "SLF001",
  "T201",
  "T203",
  "TC003",
  "TD002",
  "TD003",
  "TD006",
  "TRY003",
  "TRY300",
  "UP006",
  "UP031",
  "UP035",
  "UP040",
]

[tool.ruff.lint.isort]
force-single-line = true
